test/cases/bad/bad064.lat
int main() {
    string s;
    s - s;
    return 0;
}
